[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/assets/sheets/kenney_sokobanpack/Spritesheet/player.png" type="Texture" id=1]
[ext_resource path="res://src/assets/sounds/cough.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/scripts/player.gd" type="Script" id=3]
[ext_resource path="res://src/assets/sounds/kenney_rpgaudio/Audio/footstep00.ogg" type="AudioStream" id=4]
[ext_resource path="res://src/assets/sounds/intensive_cough.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=5]
resource_name = "fall"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 21, 22 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 10 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 42, 50 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 42, 50 )

[node name="player" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
vframes = 5
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/fall = SubResource( 5 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 14
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="FootStepsSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
